--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             
         </div>
         <div class="timelines-container mt-4">
-            <div class="row timeline-element first-separline mb-5">
+            <div class="row timeline-element first-separline mb-5 reverseTimeline">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
                         <p class="mbr-timeline-date display-7"></p>
@@ -116,7 +116,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row timeline-element first-separline mb-5">
+            <div class="row timeline-element first-separline mb-5 reverseTimeline">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
                         <p class="mbr-timeline-date display-7">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row timeline-element first-separline mb-5">
+            <div class="row timeline-element first-separline mb-5 reverseTimeline">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
                         <p class="mbr-timeline-date display-7">
@@ -159,7 +159,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row timeline-element first-separline mb-5">
+            <div class="row timeline-element first-separline mb-5 reverseTimeline">
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
                         <p class="mbr-timeline-date display-7">
@@ -204,7 +204,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="z5c1HqbSGqWYZ1eRVn48ArzFnTqpIevtDyXYipYOpNnkgmPNndi4t5gH1TfLxAYdcwbRnx6+sq61llwG4NZ2nXkLkXnYC1RrgSG+7ADUyBY2j+qim0L2tJ+PMCsNRfZh">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="R9tThO+cqrSm4Xh5XJwdYstAJTPQd+S8W2jDLXvW5LgWsLaCtFysTusBhNdkg2oX99lG5y5GRVnv3TQFD4v0KdLKSms6ul5orpXCmmm7r59ewbpn6WKmhX7+hDXYmv22">
                     
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
@@ -275,7 +275,7 @@
                         </a>
                     </div>
                     <div class="soc-item">
-                        <a href="" target="_blank">
+                        <a href="https://www.facebook.com/shivanshsrinet" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-facebook socicon"></span>
                         </a>
                     </div>
@@ -306,7 +306,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="" style="color:#aaa;"></a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise page builder - <a href="https://mobirise.site/o" style="color:#aaa;">Click for more</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/formstyler/jquery.formstyler.js"></script>  <script src="assets/formstyler/jquery.formstyler.min.js"></script>  <script src="assets/datepicker/jquery.datetimepicker.full.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
   <input name="animation" type="hidden">
